<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Digital Controller</string>
    <string name="refresh">Refresh</string>
    <string name="str_play">Play</string>
    <string name="str_pause">Pause</string>
    <string name="str_stop">Stop</string>
    <string name="browselocal">Browse Local</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="youtube">YouTube</string>
    <string name="link1">http://www.youtube.com/watch?v=4bNe8WlNAaU</string>
    <string name="link2">http://www.youtube.com/watch?v=J8r9WArliy4</string>
    <string name="link3">http://www.youtube.com/watch?v=kPKZNgbC4co</string>
    <string name="link4">http://www.youtube.com/watch?v=o95Wddd9AQw</string>
    <string name="link5">http://www.youtube.com/watch?v=oCg4ZgAtd9o</string>
    <string name="link6">http://www.youtube.com/watch?v=f0NdZ37GSGQ</string>
    <string name="link7">http://192.168.163.1:7777/abc</string>

</resources>