<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link2" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="S&quot;onLinkClick&quot;"
        android:text="@string/link3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link4" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link5" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link6" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:onClick="onLinkClick"
        android:text="@string/link7" />

</LinearLayout>